--- a/README.html
+++ b/README.html
@@ -402,6 +402,22 @@ navigate to <code>RESULTS &gt; FOLD{fold}</code></p></li>
 via <a href="roycelim578@gmail.com">roycelim578@gmail.com</a></p></li>
 </ul>
 </div>
+<div id="license" class="section level2">
+<h2>License</h2>
+<p>RNN_USEQ_MARK6 - Using LSTM models to predict U.S. stock price
+movement</p>
+<p>Copyright (C) 2025 Royce Lim</p>
+<p>This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU Affero General Public License as published
+by the Free Software Foundation, either version 3 of the License, or (at
+your option) any later version.</p>
+<p>This program is distributed in the hope that it will be useful, but
+WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Affero
+General Public License for more details.</p>
+<p>You should have received a copy of the GNU Affero General Public
+License along with this program. If not, see <a href="https://www.gnu.org/licenses/" class="uri">https://www.gnu.org/licenses/</a>.</p>
+</div>
 </div>
 
 
